# copilot-extensions

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md
libs/endpoint-rendezvous/: README.md  pyproject.toml
libs/endpoint-rendezvous/tests/: test_rendezvous.py
libs/zdd/: pyproject.toml
libs/zdd/tests/: test_cutover.py  test_routing.py
plugins/agent-bridge/: .gitignore  README.md  plugin.json  pyproject.toml
plugins/agent-bridge/docs/: architecture.md  getting-started.md  machine-config.md
plugins/agent-bridge/scripts/: install.ps1  install.sh
plugins/agent-bridge/tests/: conftest.py  test_acp_agent.py  test_acp_client.py  test_acp_connect.py  test_acp_ws.py  test_agent_registry.py  test_bare_name_resolution.py  test_client_connect.py  test_client_routing.py  test_client_sse.py  test_codespace_spawner.py  test_codespace_transport.py  test_config.py  test_config_migrations.py  test_connect.py  test_cursor_routes.py  test_cutover.py  test_db.py  test_default_port.py  test_delivery_cursor.py  test_deploy.py  test_drain.py  test_elevated.py  test_emit_back.py  test_events.py  test_gc.py  test_idle_reaper.py  test_idle_shutdown.py  test_install_ps1_supervisor_cwd.py  test_install_sh_downgrade_guard.py  test_live_delivery.py  test_live_representation.py  test_live_sessions.py  test_liveness.py  test_phased_timeouts.py  test_procgroup.py  test_progress.py  test_prompt_file.py  test_reconnect.py  test_related_plugins.py  (+21 more)
plugins/agent-codespaces/: README.md  plugin.json  pyproject.toml
plugins/agent-codespaces/scripts/: init.ps1  init.sh  install.ps1  install.sh  service.yaml
plugins/agent-codespaces/tests/: test_auth_preflight.py  test_az_login.py  test_bridge_provider.py  test_cli.py  test_codespace_assets.py  test_codespace_config.py  test_codespace_plugins.py  test_codespace_register.py  test_config.py  test_config_init.py  test_config_migrations.py  test_connect.py  test_credential_relay.py  test_lease.py  test_lifecycle.py  test_pipe_stdio.py  test_plugin_staging.py  test_provision.py  test_prune_lifecycle.py  test_relay_launch.py  test_relay_shim.py  test_remote_cmd.py  test_resolver_friendly.py  test_resolver_plugins.py  test_resolver_repo.py  test_sessions.py  test_ssh_lock.py  test_status.py  test_wait_tolerance.py
plugins/agent-containers/: README.md  plugin.json  pyproject.toml
plugins/agent-containers/scripts/: init.ps1  init.sh
plugins/agent-containers/tests/: test_config.py  test_config_migrations.py  test_lease.py  test_lifecycle.py  test_resolver.py
plugins/agent-dispatch/: .gitignore  README.md  plugin.json  pyproject.toml
plugins/agent-dispatch/docs/: spawn-supervisor.md
plugins/agent-dispatch/pivots/: agent-dispatch.json
plugins/agent-dispatch/scripts/: init.ps1  init.sh  install.ps1  install.sh
plugins/agent-dispatch/tests/: _helpers.py  test_bind_safety.py  test_bridge.py  test_cli.py  test_config.py  test_coordinator.py  test_embody.py  test_eval_lease.py  test_events.py  test_fleet.py  test_identity.py  test_launcher.py  test_mcp_http.py  test_mcp_server.py  test_netinfo.py  test_payload.py  test_producers_schedule.py  test_producers_webhook.py  test_queue.py  test_remote_dispatch.py  test_selectors.py  test_server_advertise.py  test_spawn_reservation.py  test_supervisor.py  test_supervisor_install.py  test_tracking.py  test_version.py
plugins/agent-logger/: README.md  hooks.json  plugin.json  pyproject.toml
plugins/agent-logger/agents/: .gitkeep  session-log-writer.agent.md
plugins/agent-logger/docs/: .gitkeep  architecture.md  deployment-topologies.md  manifest-contract.md
plugins/agent-logger/scripts/: .gitkeep  install.ps1  install.sh  service.yaml
plugins/agent-logger/skills/: .gitkeep
plugins/agent-logger/tests/: test_config_migrations.py  test_notify.py  test_scaffold.py  test_segmenter.py  test_spawn.py  test_sync.py
plugins/agent-mcp/: README.md  plugin.json  pyproject.toml
plugins/agent-mcp/scripts/: init.ps1  init.sh
plugins/agent-mcp/tests/: _fake.py  test_auth.py  test_bridge.py  test_bridge_e2e.py  test_cli_tools.py  test_cli_transport.py  test_client.py  test_config.py  test_decorator_code_mode.py  test_decorator_defer.py  test_decorator_filter.py  test_decorator_gate.py  test_decorator_rename.py  test_decorator_storage.py  test_decorator_transform.py  test_decorators_config.py  test_exec.py  test_http.py  test_materialize.py  test_pipeline.py  test_runner.py  test_serve.py  test_sse.py  test_stdio.py
plugins/agent-ssh/: .gitignore  README.md  plugin.json  pyproject.toml
plugins/agent-ssh/contract/: module.schema.json  registry-record.schema.json
plugins/agent-ssh/core/: ssh_profile.py
plugins/agent-ssh/docs/: transport-provider-contract.md
plugins/agent-ssh/scripts/: emit-profile.ps1  emit-profile.sh  init.ps1  init.sh  install.ps1  install.sh  verify.ps1  verify.sh
plugins/agent-ssh/tests/: test_explore.py  test_ssh_profile.py
plugins/agent-vault/: README.md  plugin.json  pyproject.toml
plugins/agent-vault/scripts/: init.ps1  init.sh  install.ps1  install.sh
plugins/agent-vault/tests/: test_auto_unlock.py  test_cache.py  test_cache_persistent.py  test_client_discovery.py  test_edit_actions.py  test_extensions.py  test_failfast.py  test_gcm.py  test_paths.py  test_prompt.py  test_rendezvous_advertise.py  test_winpipe.py
plugins/agent-worktrees/: README.md  hooks.json  modules.json  plugin.json  pyproject.toml
plugins/agent-worktrees/.pytmp/: empty-pivotscurrent  empty-pluginscurrent
plugins/agent-worktrees/docs/: architecture.md  cli-reference.md  config-reference.md  getting-started.md  mux.md  picker.md  worktree-lifecycle.md
plugins/agent-worktrees/scripts/: anchor-hygiene-check.ps1  anchor-hygiene-check.sh  bootstrap-check.ps1  bootstrap-check.sh  default-setup.ps1  default-setup.sh  deregister-session.ps1  deregister-session.sh  init.ps1  init.sh  install.ps1  install.sh  project-hooks.ps1  project-hooks.sh  register-session.ps1  register-session.sh  service-utils.ps1  service.yaml
plugins/worktree-manager/: hooks.json  plugin.json  pyproject.toml
(+542 files in other folders)
