[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "endpoint-rendezvous"
version = "0.1.0-dev1"
description = "Rendezvous (port-mapping) files for discoverable, collision-free local endpoints in Copilot CLI plugins"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Michon" }
]
# No runtime dependencies beyond stdlib -- pure library
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are the point in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
