[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-zdd"
version = "0.1.0-dev1"
description = "Zero-downtime active/passive cutover primitives (routing table + orchestrator) for Copilot CLI plugins and facility services"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Michon" }
]
# No runtime dependencies beyond stdlib -- pure library
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "RUF"]
ignore = ["S104"]  # binding to 0.0.0.0 is intentional (consumer-controlled bind)
