[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bridge"
version = "0.4.0-dev19"
description = "Persistent inter-agent communication service for Copilot CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Michon" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "agent-client-protocol>=0.9,<1",
    "agent-ssh-manager",
    "agent-credential-relay",
]

[tool.uv.sources]
# Always resolve the vendored lib from the local path, never an index.
# The distribution is named agent-ssh-manager (not the squatted PyPI name
# "ssh-manager") to prevent dependency-confusion; the import module stays
# ``ssh_manager``.
agent-ssh-manager = { path = "libs/ssh-manager" }
# credential-relay framework + host-credential sources (module ``credential_relay``).
agent-credential-relay = { path = "libs/credential-relay" }

[project.scripts]
agent-bridge = "agent_bridge.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "RUF"]
ignore = ["S104"]  # binding to 0.0.0.0 is intentional in some configs
