[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bridge"
version = "0.4.0-dev108"
description = "Persistent inter-agent communication service for Copilot CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Michon" }
]
dependencies = [
    "fastapi>=0.115.0",
    # Plain uvicorn (not the [standard] extra) so the HTTP path stays pure
    # Python (h11) on every platform. agent-bridge serves low-traffic localhost
    # SSE -- it uses none of [standard]'s optional speedups (httptools, uvloop,
    # websockets, watchfiles), and httptools in particular ships no win-arm64
    # wheel and would build from source (MSVC) on headless ARM64 hosts. h11 is
    # a core uvicorn dependency and uvicorn.run() falls back to it by default.
    "uvicorn>=0.30.0",
    # Pure-Python WebSocket support for uvicorn (ACP-over-WS transport in
    # routes/acp_ws.py). wsproto is sans-I/O and depends only on h11 (already a
    # uvicorn core dep), so it adds no native build -- unlike the `websockets`
    # speedup in uvicorn[standard]. Keeps the win-arm64 / pure-h11 guarantee.
    "wsproto>=1.2",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "agent-client-protocol>=0.10.1,<1",
    "agent-ssh-manager",
    "agent-credential-relay",
    "agent-zdd",
]

[tool.uv.sources]
# Always resolve the vendored lib from the local path, never an index.
# The distribution is named agent-ssh-manager (not the squatted PyPI name
# "ssh-manager") to prevent dependency-confusion; the import module stays
# ``ssh_manager``.
agent-ssh-manager = { path = "libs/ssh-manager" }
# credential-relay framework + host-credential sources (module ``credential_relay``).
agent-credential-relay = { path = "libs/credential-relay" }
# zero-downtime cutover primitives -- the routing table + cutover orchestrator
# (module ``zdd``), extracted from this plugin so other services reuse them.
agent-zdd = { path = "libs/zdd" }

[project.scripts]
agent-bridge = "agent_bridge.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "RUF"]
ignore = ["S104"]  # binding to 0.0.0.0 is intentional in some configs
