[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-codespaces"
version = "0.3.3-dev1"
description = "GitHub Codespaces lifecycle management, SSH transport, and credential relay"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Michon" }
]
dependencies = [
    "pyyaml>=6.0",
    "ssh-manager",
]

[project.scripts]
agent-codespaces = "agent_codespaces.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_codespaces = ["codespace_assets/ado-auth-helper-relay", "codespace_assets/ado-auth-helper-wrapper"]

[tool.ruff]
target-version = "py310"
line-length = 99

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff.lint]
ignore = ["S603"]  # subprocess calls to gh CLI are intentional
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
