[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-logger"
version = "0.1.1-dev7"
description = "Reusable Copilot CLI session logging -- segmenter, log writer, session-sync, and orchestrator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Michon" }
]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
agent-logger = "agent_logger.__main__:main"
collate-session = "agent_logger.segmenter.collate:main"
read-session-digest = "agent_logger.segmenter.read_digest:main"
prepare-session-log = "agent_logger.segmenter.prepare_log:main"
session-sync = "agent_logger.sync.engine:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "RUF"]
ignore = [
    "S603",  # subprocess calls to git/copilot CLIs are intentional
    "S607",  # ssh/rsync are resolved from PATH by design
    "S310",  # notify URL is operator-configured, not attacker-controlled
    "S108",  # /tmp fallback is an intentional cross-platform default
    "S110",  # best-effort file reads intentionally swallow errors
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are expected in pytest

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
