[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-vault"
version = "0.1.0-dev14"
description = "Local KeePassXC-backed secret store for Copilot CLI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Michon" }
]
dependencies = [
    "agent-endpoint-rendezvous",
]

[tool.uv.sources]
# Resolve the vendored lib from the local path, never an index. The distribution
# is named agent-endpoint-rendezvous (anti-squatting); the import module stays
# ``endpoint_rendezvous``. Installers uv-pip-install libs/endpoint-rendezvous
# explicitly before the plugin (uv pip does not honor tool.uv.sources).
agent-endpoint-rendezvous = { path = "libs/endpoint-rendezvous" }

[project.optional-dependencies]
# The persistent on-disk credential cache (opt-in) encrypts entries with Fernet.
# Install with `pip install agent-vault[cache]` (or provide cryptography another
# way); without it the cache degrades to a safe no-op.
cache = ["cryptography>=3.4"]

[project.scripts]
agent-vault = "agent_vault.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # asserts + fake tokens are expected in tests
