[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-worktrees"
version = "1.4.1-dev21"
description = "Worktree isolation system for concurrent Copilot CLI sessions"
readme = "../../README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Michon" }
]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
agent-worktrees = "agent_worktrees.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
