[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-worktrees"
version = "1.5.3-dev26"
description = "Worktree isolation system for concurrent Copilot CLI sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Michon" }
]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
agent-worktrees = "agent_worktrees.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]

[tool.setuptools.packages.find]
where = ["src"]
