[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-worktrees"
version = "1.5.3-dev72"
description = "Worktree isolation system for concurrent Copilot CLI sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Michon" }
]
dependencies = [
    "pyyaml>=6.0",
    "textual>=8.0",
]

[project.scripts]
agent-worktrees = "agent_worktrees.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Ported TUI rendering engine: intentional box/arrow glyphs (‹ › ◀ ▶ etc.) trip
# the ambiguous-unicode checks (RUF001-003), and the dense render loops use
# tuple-unpacking where not every field is read (B007/RUF005/RUF059). These are
# faithful to the design prototype and harmless in a self-contained UI module.
"src/agent_worktrees/picker_tui/engine.py" = [
    "RUF001", "RUF002", "RUF003", "B007", "RUF005", "RUF059",
]

[tool.setuptools.packages.find]
where = ["src"]
