[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-manager"
version = "0.1.0-dev1"
description = "Shared SSH ControlMaster connection multiplexer for Copilot CLI plugins"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Michon" }
]
# No runtime dependencies beyond stdlib -- pure library
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires real SSH host (set SSH_MANAGER_INTEGRATION_HOST)",
]
